// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`update gitignore should add entries to .gitignore if they do not exist 1`] = `
"
# See http://help.github.com/ignore-files/ for more about ignoring files.

# compiled output
dist
tmp
/out-tsc

# dependencies
node_modules

# IDEs and editors
/.idea
.project
.classpath
.c9/
*.launch
.settings/
*.sublime-workspace
.output_data

# Nuxt dev/build outputs
.output
.data
.nuxt
.nitro
.cache"
`;

exports[`update gitignore should not add duplicate entries to .gitignore if they already exist 1`] = `
"
# See http://help.github.com/ignore-files/ for more about ignoring files.

# compiled output
dist
tmp
/out-tsc

# dependencies
node_modules

# IDEs and editors
/.idea
.project
.classpath
.c9/
*.launch
.settings/
*.sublime-workspace

# Nuxt dev/build outputs
.output
.data
.nuxt
.nitro
.cache
"
`;
